# sttc

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  main.py  pyproject.toml  sttc.spec
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md
scripts/: build.py  generate_icons.py  pyinstaller_runtime_hook.py
scripts/appimage/: AppRun  sttc.desktop
src/sttc/: __init__.py  __main__.py  app.py  autostart.py  cli.py  clipboard.py  first_run.py  onboarding.py  recorder.py  refiner.py  runtime.py  settings.py  transcriber.py
src/sttc/gui/: __init__.py  app.py  bridge.py  env_editor.py  mini_window.py  onboarding_dialog.py  settings_window.py  tray.py
tests/: __init__.py  test_autostart.py  test_env_editor.py  test_first_run.py  test_hotkey_listener.py  test_onboarding.py  test_refiner.py  test_runtime_controller.py  test_runtime_refactor.py  test_settings.py  test_sttc.py  test_transcriber.py
